--- a/Malmö högskola/inlamning6.html
+++ b/Malmö högskola/inlamning6.html
@@ -27,7 +27,7 @@
 		<header>
 			Innehåll
 		</header>
-		<div class="flexbox">
+		<div class="section_flexbox">
 			<div class="item">
 				<img src="logo-1913689_1280.png" alt="flame, logo">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
