--- a/Malmö högskola/inlamning6.html
+++ b/Malmö högskola/inlamning6.html
@@ -44,6 +44,10 @@
 				<img src="logo-1913689_1280.png" alt="flame, logo">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
+			<div class="item">
+				<img src="logo-1913689_1280.png" alt="flame, logo">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
 		</div>
 		<hr>
 		<section class="main_section">
