--- a/Malmö högskola/index.html
+++ b/Malmö högskola/index.html
@@ -28,6 +28,9 @@
 	</div>
 	<div class="container">
 		<h3 id="homeh3">HOME</h3>
+		<p>
+			<a href="/inlamning6.html">Inlämning 6</a>
+		</p>
 	</div>
 	<footer>
 		<p>I'm a fancy footer. © FakeCompanyAB</p>
