--- a/Malmö högskola/inlamning6.html
+++ b/Malmö högskola/inlamning6.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="sidebar">
-		 <img src="logo-1913689_1280.png" alt="flame logo">
+		 <a href="/index.html" style="text-decoration: none;"><img src="logo-1913689_1280.png" alt="flame logo"></a>
 		<header>
 			Meny
 		</header>
