--- a/Malmö högskola/index.html
+++ b/Malmö högskola/index.html
@@ -29,6 +29,9 @@
 	<div class="container">
 		<h3 id="homeh3">HOME</h3>
 		<a href="/inlamning6.html">Inlämning 6</a>
+		<div class="hover_img">
+     		<a href="#">Show Image<span><img src="logo-1913689_1280.png" alt="image" height="100" width="100" /></span></a>
+		</div>
 	</div>
 	
 	<footer>
