--- a/Malmö högskola/index.html
+++ b/Malmö högskola/index.html
@@ -30,7 +30,7 @@
 		<h3 id="homeh3">HOME</h3>
 		<a href="/inlamning6.html">Inlämning 6</a>
 		<div class="hover_img">
-     		<a href="#">Show Image<span><img src="logo-1913689_1280.png" alt="image" height="100" width="100" /></span></a>
+     		<a href="#">Show Image<span><img src="i6_png.png" alt="image" height="317" width="640"/></span></a>
 		</div>
 	</div>
 	
