--- a/Malmö högskola/index.html
+++ b/Malmö högskola/index.html
@@ -28,9 +28,8 @@
 	</div>
 	<div class="container">
 		<h3 id="homeh3">HOME</h3>
-		<a href="/inlamning6.html">Inlämning 6</a>
 		<div class="hover_img">
-     		<a href="#">Show Image<span><img src="i6_png.png" alt="image" height="317" width="640"/></span></a>
+     		<a href="#">Inlämning 6<span><img src="i6_png.png" alt="image" height="317" width="640"/></span></a>
 		</div>
 	</div>
 	
