--- a/Malmö högskola/contact.html
+++ b/Malmö högskola/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -27,7 +27,7 @@
 	<div id="main">
 		<h3>Contact</h3>
 	</div>
-	<div>
+	<div class="container">
 		For job inquiries contact me at fake@mail.com.
 	</div>
 	<footer>
