--- a/Malmö högskola/inlamning6.html
+++ b/Malmö högskola/inlamning6.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Tarek Bermalm - Devstuff</title>
 	<link href="design_i6.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600" rel="stylesheet">
