--- a/Malmö högskola/inlamning6.html
+++ b/Malmö högskola/inlamning6.html
@@ -25,8 +25,11 @@
 		</ul> 
 	</div>
 	<div class="container">
-		<header>
+		<header id="jstest">
 			Innehåll
+
+			<script type="text/javascript" src="/test.js"></script>
+
 		</header>
 		<div class="section_flexbox">
 			<div class="item">
