--- a/Malmö högskola/inlamning6.html
+++ b/Malmö högskola/inlamning6.html
@@ -25,11 +25,8 @@
 		</ul> 
 	</div>
 	<div class="container">
-		<header id="jstest">
+		<header>
 			Innehåll
-
-			<script type="text/javascript" src="/test.js"></script>
-
 		</header>
 		<div class="section_flexbox">
 			<div class="item">
