--- a/Malmö högskola/Inlamning1.html
+++ b/Malmö högskola/Inlamning1.html
@@ -24,6 +24,8 @@
 				<a href="/inlamning5.html">Inlämning 5</a>
 				<a href="/inlamning6.html">Inlämning 6</a>
 			</div>
+		</div>
+			<div class="dropdown">
 			<button class="dropbtn">Webbutveckling 2 - Klient <span>▼</span></button>
 			<div class="dropdown-content">
 				<a href="/inlamning1.html">Inlämning 1</a>
@@ -34,7 +36,8 @@
 				<a href="/inlamning5.html">Inlämning 5</a>
 				<a href="/inlamning6.html">Inlämning 6</a>
 			</div>
-		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
+		</div>
+		<a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
 	<div id="main">
 		<h1>Inlämning 1</h1>
