--- a/Malmö högskola/index.html
+++ b/Malmö högskola/index.html
@@ -12,7 +12,7 @@
 	<header>
 		<h1 id="headerh1">tbdevstuff</h1>
 	</header></a>
-	<div class="navbar">
+		<div class="navbar">
 		<div class="dropdown">
 			<button class="dropbtn">Webbutveckling 1 <span>▼</span></button>
 			<div class="dropdown-content">
@@ -24,6 +24,8 @@
 				<a href="/inlamning5.html">Inlämning 5</a>
 				<a href="/inlamning6.html">Inlämning 6</a>
 			</div>
+		</div>
+		<div class="dropdown">
 			<button class="dropbtn">Webbutveckling 2 - Klient <span>▼</span></button>
 			<div class="dropdown-content">
 				<a href="/inlamning1.html">Inlämning 1</a>
@@ -34,7 +36,8 @@
 				<a href="/inlamning5.html">Inlämning 5</a>
 				<a href="/inlamning6.html">Inlämning 6</a>
 			</div>
-		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
+		</div>
+		<a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
 	<div class="container">
 		<h3 id="homeh3">HOME</h3>
