--- a/Malmö högskola/index.html
+++ b/Malmö högskola/index.html
@@ -28,13 +28,7 @@
 		<div class="dropdown">
 			<button class="dropbtn">Webbutveckling 2 - Klient <span>▼</span></button>
 			<div class="dropdown-content">
-				<a href="/inlamning1.html">Inlämning 1</a>
-				<a href="/inlamning1_del2.html">Inlämning 1 - Del 2</a>
-				<a href="/inlamning2.html">Inlämning 2</a>
-				<a href="/inlamning3.html">Inlämning 3</a>
-				<a href="/inlamning4.html">Inlämning 4</a>
-				<a href="/inlamning5.html">Inlämning 5</a>
-				<a href="/inlamning6.html">Inlämning 6</a>
+				<a href="/klient_inlamning1.html">Inlämning 1</a>
 			</div>
 		</div>
 		<a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
