--- a/Malmö högskola/Webutveckling 2 - Klient/klient_inlamning3.html
+++ b/Malmö högskola/Webutveckling 2 - Klient/klient_inlamning3.html
@@ -8,15 +8,38 @@
 <body>
   <script src="i3.js">
   </script>
+  <h1>Uppgift 1</h1>
   <div id="message-box">
     <p>This is a very important message box!</p>
   </div>
   <button id="success" onclick="changeClass(this.id)" type="button">Success</button>
   <button id="error" onclick="changeClass(this.id)" type="button">Error</button>
   <button id="info" onclick="changeClass(this.id)" type="button">Info</button>
+  <h1>Uppgift 2 & 3</h1>
   <ul id="items">
     <li>The first item is free!</li>
   </ul>
   <button id="add-item" onclick="addItem()" type="button">Add item</button>
+  <button id="remove-item" onclick="removeItem()" type="button">Remove item</button>
+  <h1>Uppgift 4</h1>
+  <ul>
+    <li>
+        This is the first item
+        <button type="button" class="remove-list-item" onClick="removeElement()">X</button>
+    </li>
+    <li>
+        This is the second item
+        <button type="button" class="remove-list-item" onClick="removeElement()">X</button>
+    </li>
+    <li>
+        This is the third item
+        <button type="button" class="remove-list-item" onClick="removeElement()">X</button>
+    </li>
+    <li>
+        This is the fourth item
+        <button type="button" class="remove-list-item" onClick="removeElement()">X</button>
+    </li>
+  </ul>
+
 </body>
 </html>
