--- a/Malmö högskola/Webutveckling 2 - Klient/klient_inlamning3.html
+++ b/Malmö högskola/Webutveckling 2 - Klient/klient_inlamning3.html
@@ -40,6 +40,24 @@
         <button type="button" class="remove-list-item" onClick="removeElement()">X</button>
     </li>
   </ul>
+  <h1>Uppgift 5</h1>
+  <form action="" method="get" id="apply-for-pet">
+    <h2>Ansökan om att skaffa husdjur</h2>
+    <input type="text" name="firstname"> Förnamn<br>
+    <input type="text" name="lastname"> Efternamn<br>
+    <input type="text" name="age"> Ålder<br>
+    <input type="text" name="email"> Epost<br>
+
+    <div id="pets">
+        <p>Typ av husdjur?</p>
+        <input type="radio" name="pet" value="dog"> Hund<br>
+        <input type="radio" name="pet" value="cat"> Katt<br>
+        <input type="radio" name="pet" value="fish"> Fisk<br>
+        <input type="radio" name="pet" value="bird"> Fågel<br>
+    </div>
+
+    <button type="submit">Skicka ansökan</button>
+</form>
 
 </body>
 </html>
