--- a/Malmö högskola/Webutveckling 2 - Klient/klient_inlamning3.html
+++ b/Malmö högskola/Webutveckling 2 - Klient/klient_inlamning3.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <link href="i3.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body onload="delayScript()">
   <script src="i3.js">
   </script>
   <h1>Uppgift 1</h1>
@@ -57,7 +57,6 @@
     </div>
 
     <button type="submit">Skicka ansökan</button>
-</form>
-
+  </form>
 </body>
 </html>
