--- a/Malmö högskola/Inlamning1.html
+++ b/Malmö högskola/Inlamning1.html
@@ -28,7 +28,7 @@
 		<div class="dropdown">
 			<button class="dropbtn">Webbutveckling 2 - Klient <span>▼</span></button>
 			<div class="dropdown-content">
-				<a href="/klient_inlamning1.html">Inlämning 1</a>
+				<a href="/Webutveckling2_Klient/klient_inlamning4.html">Inlämning 1</a>
 			</div>
 		</div>
 		<a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
