--- a/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
+++ b/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
@@ -3,8 +3,9 @@
 <head>
   <title>Inlämningsuppgift 4</title>
   <meta charset="utf-8">
-  <link href="https://www.tbdevstuff.live/webutveckling2_klient/i4.css" rel="stylesheet" type="text/css">
-  <script type="text/javascript" src="https://www.tbdevstuff.live/webutveckling2_klient/i4.js" async></script>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <link href="i4.css" rel="stylesheet" type="text/css">
+  <script type="text/javascript" src="i4.js" async></script>
 </head>
 <body>
 <h1>Search IMDB by title</h1>
