--- a/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
+++ b/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
@@ -3,20 +3,19 @@
 <head>
   <title>Inlämningsuppgift 4</title>
   <meta charset="utf-8">
-
   <link href="i4.css" rel="stylesheet" type="text/css">
   <script type="text/javascript" src="i4.js" async></script>
 </head>
 <body>
+<div id="container">
 <h1>Search IMDB by title</h1>
 <form action="" method="get" id="search-form">
     Movie: <input type="text" name="query">
     <button type="submit">Search</button>
 </form>
 <div id="result">
-	<ul id="items">
-		
-	</ul>
+	<ul id="items"></ul>
+</div>
 </div>
 </body>
 </html>
