--- a/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
+++ b/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div id="container">
+<img src="popcorn-1614707.png">
 <h1>Search IMDB by title</h1>
 <form action="" method="get" id="search-form">
     Movie: <input type="text" name="query">
