--- a/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
+++ b/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
@@ -11,7 +11,7 @@
 <img src="popcorn-1614707.png">
 <h1>Search IMDB by title</h1>
 <form action="" method="get" id="search-form">
-    Movie title: <input type="text" name="query" id="textBox">
+    Movie title: <input type="text" name="query" id="text-box">
     <button type="submit">Search</button>
 </form>
 <div id="result">
