--- a/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
+++ b/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="container">
-<img src="popcorn-1614707.png">
+<a href="/index.html"><img src="popcorn-1614707.png"></a>
 <h1>Search IMDB by title</h1>
 <form action="" method="get" id="search-form">
     Movie title: <input type="text" name="query" id="text-box">
