--- a/Malmö högskola/Inlamning1.html
+++ b/Malmö högskola/Inlamning1.html
@@ -16,13 +16,7 @@
 		<div class="dropdown">
 			<button class="dropbtn">Webbutveckling 1 <span>▼</span></button>
 			<div class="dropdown-content">
-				<a href="/inlamning1.html">Inlämning 1</a>
-				<a href="/inlamning1_del2.html">Inlämning 1 - Del 2</a>
-				<a href="/inlamning2.html">Inlämning 2</a>
-				<a href="/inlamning3.html">Inlämning 3</a>
-				<a href="/inlamning4.html">Inlämning 4</a>
-				<a href="/inlamning5.html">Inlämning 5</a>
-				<a href="/inlamning6.html">Inlämning 6</a>
+				<a href="/inlamning1.html">Inlämning 1</a> <a href="/inlamning1_del2.html">Inlämning 1 - Del 2</a> <a href="/inlamning2.html">Inlämning 2</a> <a href="/inlamning3.html">Inlämning 3</a> <a href="/inlamning4.html">Inlämning 4</a> <a href="/inlamning5.html">Inlämning 5</a> <a href="/inlamning6.html">Inlämning 6</a>
 			</div>
 		</div>
 		<div class="dropdown">
@@ -30,21 +24,20 @@
 			<div class="dropdown-content">
 				<a href="/Webutveckling2_Klient/klient_inlamning4.html">Inlämning 1</a>
 			</div>
-		</div>
-		<a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
+		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
 	<div id="main">
 		<h1>Inlämning 1</h1>
 		<h2>Intro</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <em>Excepteur sint occaecat cupidatat <strong>non proident</strong></em>, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		<h3>Ett par listor</h3>
-		<h4>Ord</h4>
-		Lorem ipsum dolor sit amet. <img alt="Bild på mig och vänner" height="480" src="https://instagram.fbma2-1.fna.fbcdn.net/v/t51.2885-15/e15/c0.90.720.720a/s640x640/62473827_124627555425927_6499804860709353593_n.jpg?_nc_ht=instagram.fbma2-1.fna.fbcdn.net&_nc_cat=103&_nc_ohc=PujZArsA1wIAX_ucdrs&oh=73c56caaddce36b4d03cd0460f40315e&oe=5ED87879" 
-		style="float:right; padding-right: 20px; padding-bottom: 20px;" width="480">
+		<h4>Ord</h4>Lorem ipsum dolor sit amet. <img alt="Bild på mig och vänner" height="480" src="https://instagram.fbma2-1.fna.fbcdn.net/v/t51.2885-15/e15/c0.90.720.720a/s640x640/62473827_124627555425927_6499804860709353593_n.jpg?_nc_ht=instagram.fbma2-1.fna.fbcdn.net&_nc_cat=103&_nc_ohc=PujZArsA1wIAX_ucdrs&oh=73c56caaddce36b4d03cd0460f40315e&oe=5ED87879" style="float:right; padding-right: 20px; padding-bottom: 20px;" width="480">
 		<ul>
 			<li>Spricka</li>
 			<li>Dog</li>
-			<li><a href="https://www.wikiwand.com/en/Mbabaram_language">Mbabaram</a></li>
+			<li>
+				<a href="https://www.wikiwand.com/en/Mbabaram_language">Mbabaram</a>
+			</li>
 			<li>Ominous</li>
 			<li>Pick</li>
 		</ul>
@@ -53,12 +46,13 @@
 			<li>Mor</li>
 			<li>Jag</li>
 			<li>Mig</li>
-			<li><a href="mailto:billgates@icloud.com.com?Subject=Hi" target="_top" title="Mailen är påhittad. Skicka ej mail. Bör endast användas i demonstrationsändamål.">Bill Gates</a></li>
-					<!--
-             	   E-postadressen är inte bekräftad, utan helt påhittad. 
-             	   I och med att adressen möjligtvis finns och används uppmanas INTE att mail skickas till e-postadressen.
-             	   'title'-attributet har används för att tydliggöra detta.
-             	   -->
+			<li>
+				<a href="mailto:billgates@icloud.com.com?Subject=Hi" target="_top" title="Mailen är påhittad. Skicka ej mail. Bör endast användas i demonstrationsändamål.">Bill Gates</a>
+			</li><!--
+                   E-postadressen är inte bekräftad, utan helt påhittad. 
+                   I och med att adressen möjligtvis finns och används uppmanas INTE att mail skickas till e-postadressen.
+                   'title'-attributet har används för att tydliggöra detta.
+                   -->
 		</ol>
 	</div>
 	<footer>
