--- a/Malmö högskola/Webutveckling2_Klient/i5/index.html
+++ b/Malmö högskola/Webutveckling2_Klient/i5/index.html
@@ -17,7 +17,7 @@
             denna kommer vara sparad i variabeln "albums".
         -->
         <script src="js/albums.js"></script>
-        <script src="js/app.js" type="text/babel"> 
+        <script src="js/index.js" type="text/babel"> 
  
         </script>
     </body>
