--- a/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
+++ b/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
@@ -12,7 +12,7 @@
 		<a href="/index.html"><img src="popcorn-1614707.png"></a>
 		<h1>Search IMDB by title</h1>
 		<form action="" id="search-form" method="get" name="search-form">
-			Movie title: <input id="text-box" name="query" type="text"> <button type="submit">Search</button>
+			Movie title: <input id="text-box" name="query" type="text"> <button type="submit">SEARCH</button>
 		</form>
 		<div id="result">
 			<ul id="items"></ul>
