--- a/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
+++ b/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
@@ -4,8 +4,8 @@
 	<title>Inlämningsuppgift 4</title>
 	<meta charset="utf-8">
 	<link href="i4.css" rel="stylesheet" type="text/css">
-	<script async src="i4.js" type="text/javascript">
-	</script>
+	<script async src="i4.js" type="text/javascript"></script>
+	<script async src="/imdb_quick_lookup/imdb_quick_lookup.js"></script>
 </head>
 <body>
 	<div id="container">
