--- a/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
+++ b/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="container">
-		<a href="/index.html" id="logo"><img src="popcorn-1614707.png"></a><div id="title-container"><h1 id="title">Search IMDB by title</h1></div>
+		<a href="/index.html" id="logo"><img src="popcorn-1614707.png"></a><h1 id="title">Search IMDB by title</h1>
 		<form action="" id="search-form" method="get" name="search-form">
 			<input id="text-box" name="query" type="text" placeholder="Enter movie title..."> <button type="submit">SEARCH</button>
 		</form>
