--- a/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
+++ b/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
@@ -5,13 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="i4.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script async src="i4.js" type="text/javascript"></script>
 </head>
 <body>
 	<div id="container">
 		<a href="/index.html" id="logo"><img src="popcorn-1614707.png"></a><h1 id="title">Search IMDB by title</h1>
 		<form action="" id="search-form" method="get" name="search-form">
-			<input id="text-box" name="query" type="text" placeholder="Enter movie title..."> <button type="submit">SEARCH</button>
+			<input id="text-box" name="query" type="text" placeholder="Enter movie title..."> <button type="submit"><i class="fa fa-search"></i></button>
 		</form>
 		<div id="result">
 			<ul id="items"></ul>
