--- a/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
+++ b/Malmö högskola/Webutveckling2_Klient/klient_inlamning4.html
@@ -12,7 +12,7 @@
 	<div id="container">
 		<a href="/index.html" id="logo"><img src="popcorn-1614707.png"></a><h1 id="title">Search IMDB by title</h1>
 		<form action="" id="search-form" method="get" name="search-form">
-			<input id="text-box" name="query" type="text" placeholder="Enter movie title..."> <button type="submit"><i class="fa fa-search" font-size="w3-xxlarge"></i></button>
+			<input id="text-box" name="query" type="text" placeholder="Enter movie title..."> <button type="submit"><i class="fa fa-search w3-large"></i></button>
 		</form>
 		<div id="result">
 			<ul id="items"></ul>
