--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Inlämningsuppgift 4</title>
+	<title>Quickly search IMDB ratings</title>
 	<meta charset="utf-8">
-	<link href="i4.css" rel="stylesheet" type="text/css">
-	<script async src="imdb_quick_search.js" type="text/javascript"></script>
-	<script async src="imdb_quick_search/imdb_quick_search.js"></script>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<link href="imdb_quick_search.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script async src="imdb_quick_searchjs" type="text/javascript"></script>
 </head>
 <body>
 	<div id="container">
-		<a href="/index.html"><img src="popcorn-1614707.png"></a>
-		<h1>Search IMDB for rating by title</h1>
+		<a href="/index.html" id="logo"><img src="popcorn-1614707.png"></a><h1 id="title">Quickly search IMDB ratings</h1>
 		<form action="" id="search-form" method="get" name="search-form">
-			Movie title: <input id="text-box" name="query" type="text"> <button type="submit">Search</button>
+			<input id="text-box" name="query" type="text" placeholder="Enter movie title..."> <button type="submit"><i class="w3-jumbo fa fa-search"></i></button>
 		</form>
 		<div id="result">
 			<ul id="items"></ul>
