--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -11,7 +11,7 @@
 <body>
 	<div id="container">
 		<a href="/index.html" id="logo"><img src="/Webutveckling2_Klient/popcorn-1614707.png"></a><h1 id="title">Quickly search IMDB ratings</h1>
-		<form action="" id="search-form" method="get" name="search-form">
+		<form action="" id="search-form" method="get" name="search-form" autocomplete="off" autofocus>
 			<input id="text-box" name="query" type="text" placeholder="Enter movie title..."><button type="submit"><i class="w3-jumbo fa fa-search"></i></button>
 		</form>
 		<div id="result">
