--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Quickly search IMDB ratings</title>
+	<title>Quicksearch IMDB</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="imdb_quick_seach.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="shortcut icon" href="popcorn-1614707.ico">
+	<link rel="shortcut icon" href="#" />
 	<script async src="imdb_quick_search.js" type="text/javascript"></script>
+
 </head>
 <body>
 	<div id="container">
