--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -19,6 +19,12 @@
 		</form>
 		<div id="result">
 		</div>
+
+		<div id="test-div">
+			<img src="test.jpg">
+			Test (2013), 6.5
+		</div>
+
 	</div>
 </body>
 </html>
