--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -22,8 +22,11 @@
 
 		<div id="test-div">
 			<img src="test.jpg">
-			<span id="title-year">Test (2013)</span>
-			<span id="cast">Jennyfar AniStån, Mak Valburg, Brady Pid</span>
+			<div id="item-text">
+				<span id="title-year">Test (2013)</span>
+				<span id="cast">Jennyfar AniStån, Mak Valburg, Brady Pid</span>
+			</div>
+			
 			<span id="rating">6.5</span>
 		</div>
 
