--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -27,8 +27,10 @@
 				<span id="cast">Jennyfar AniStån, Mak Valburg, Brady Pid</span>
 			</div>
 			
-			<span id="rating">6.5</span>
-			<i class="fa fa-star" aria-hidden="true"></i>
+			<span id="rating">
+				6.5<br>
+				<i class="fa fa-star" aria-hidden="true"></i>
+			</span>
 		</div>
 
 	</div>
