--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -28,8 +28,8 @@
 			</div>
 			
 			<span id="rating">
-				6.5<br>
-				<i class="fa fa-star" aria-hidden="true"></i>
+			<i class="fa fa-star" aria-hidden="true"></i>6.5
+				
 			</span>
 		</div>
 
