--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -23,7 +23,7 @@
 		<div id="test-div">
 			<img src="test.jpg">
 			<div id="item-text">
-				<span id="title-year">Test (2013)</span>
+				<span id="title-year">Test (2013)</span><br>
 				<span id="cast">Jennyfar AniStån, Mak Valburg, Brady Pid</span>
 			</div>
 			
