--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -9,27 +9,24 @@
 	<link rel="shortcut icon" href="popcorn-1614707.ico">
 	<link rel="shortcut icon" href="#" />
 	<script async src="imdb_quick_search.js" type="text/javascript"></script>
-
 </head>
 <body>
 	<div id="container">
 		<a href="/index.html" id="logo"><img src="/Webutveckling2_Klient/popcorn-1614707.png"></a><h1 id="title">Quickly search IMDB ratings</h1>
 		<form action="" id="search-form" method="get" name="search-form" autocomplete="off">
-			<input id="text-box" name="query" type="text" placeholder="Enter movie title..." autofocus><button type="submit"><i class="w3-jumbo fa fa-search"></i></button>
+			<input id="text-box" name="query" type="text" placeholder="Enter movie title..." autofocus><button type="submit"><i class="fa fa-search"></i></button>
 		</form>
 		<div id="result">
 		</div>
-
 		<div id="test-div">
 			<img src="test.jpg">
 			<div id="item-text">
 				<span id="title-year">Test (2013)</span><br>
 				<span id="cast">Jennyfar AniStån, Mak Valburg, Brady Pid</span>
 			</div>
-			
 			<span id="rating">
-			<i class="fa fa-star" aria-hidden="true"></i> 6.5
-				
+			<i class="fa fa-star" aria-hidden="true"></i> 6.5<br>
+			<span id="rating-max">/10</span>
 			</span>
 		</div>
 
