--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -24,10 +24,10 @@
 				<span id="title-year">Test (2013)</span><br>
 				<span id="cast">Jennyfar AniStån, Mak Valburg, Brady Pid</span>
 			</div>
-			<span id="rating">
-			<i class="fa fa-star" aria-hidden="true"></i> 6.5<br>
+			<div id="rating">
+			<i class="fa fa-star" aria-hidden="true"></i><span id="rating-score">6.5</span><br>
 			<span id="rating-max">/10</span>
-			</span>
+			</div>
 		</div>
 
 	</div>
