--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -18,9 +18,9 @@
 		</form>
 		<div id="result">
 		</div>
-		<div id="test-div">
+		<div id="movie-container">
 			<img src="test.jpg">
-			<div id="item-text">
+			<div id="text">
 				<span id="title-year">Test (2013)</span><br>
 				<span id="cast">Jennyfar AniStån, Mak Valburg, Brady Pid</span>
 			</div>
