--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/tempremovelater.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/tempremovelater.html
@@ -18,7 +18,17 @@
 		</form>
 		<div id="result">
 		</div>
-		
+		<div id="movie-container">
+			<img src="test.jpg">
+			<div id="text">
+				<span id="title-year">Test (2013)</span><br>
+				<span id="cast">Jennyfar AniStån, Mak Valburg, Brady Pid</span>
+			</div>
+			<div id="rating">
+			<i class="fa fa-star" aria-hidden="true"></i><span id="rating-score"> 6.5</span><br>
+			<span id="rating-max">/10</span>
+			</div>
+		</div>
 
 	</div>
 </body>
