--- a/Malmö högskola/index.html
+++ b/Malmö högskola/index.html
@@ -8,32 +8,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono:100,200,300,400,500,600" rel="stylesheet">
 </head>
 <body id="homepage">
-	<a href="/index.html" style="text-decoration: none;">
-	<header>
-		<h1 id="headerh1">tbdevstuff</h1>
-	</header></a>
-	<div class="navbar">
-		<div class="dropdown">
-			<button class="dropbtn">Webbutveckling 1 <span>▼</span></button>
-			<div class="dropdown-content">
-				<a href="/inlamning1.html">Inlämning 1</a> <a href="/inlamning1_del2.html">Inlämning 1 - Del 2</a> <a href="/inlamning2.html">Inlämning 2</a> <a href="/inlamning3.html">Inlämning 3</a> <a href="/inlamning4.html">Inlämning 4</a> <a href="/inlamning5.html">Inlämning 5</a> <a href="/inlamning6.html">Inlämning 6</a>
-			</div>
-		</div>
-		<div class="dropdown">
-			<button class="dropbtn">Webbutveckling 2 - Klient <span>▼</span></button>
-			<div class="dropdown-content">
-				<a href="/Webutveckling2_Klient/klient_inlamning4.html">Inlämning 1</a>
-			</div>
-		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
-	</div>
 	<div class="container">
-		<h3 id="homeh3">HOME</h3>
+		<h3 id="homeh3">i6</h3>
 		<div class="hover_img">
 			<a href="/inlamning6.html">Inlämning 6<span><img alt="image" height="317" src="i6_png.png" width="640"></span></a>
+			<a href="https://www.tbdevstuff.live/webutveckling2_klient/imdb_quick_search/imdb_quick_search.html">Simple IMDB Search</a>
 		</div>
 	</div>
-	<footer>
-		<p>I'm a fancy footer. © FakeCompanyAB</p>
-	</footer>
+
 </body>
 </html>
