--- a/Malmö högskola/index.html
+++ b/Malmö högskola/index.html
@@ -14,6 +14,10 @@
 			<br>
 			<br>
 			<br>
+			<a href="/restaurant/index.html"></a>
+			<br>
+			<br>
+			<br>
 			<a href="/inlamning6.html">Inlämning 6<span><img alt="image" height="317" src="i6_png.png" width="640"></span></a>
 		</div>
 	</div>
