--- a/Malmö högskola/index.html
+++ b/Malmö högskola/index.html
@@ -8,9 +8,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono:100,200,300,400,500,600" rel="stylesheet">
 </head>
 <body id="homepage">
-	<div class="container" style="margin-top: 50px">
+	<div class="container" style="padding-top: 50px">
 		<div class="hover_img">
-		
 			<a href="https://www.tbdevstuff.live/webutveckling2_klient/imdb_quick_search/imdb_quick_search.html">Simple IMDB Search</a>
 			<br>
 			<br>
