--- a/Malmö högskola/index.html
+++ b/Malmö högskola/index.html
@@ -14,7 +14,7 @@
 			<br>
 			<br>
 			<br>
-			<a href="restaurant/index.html"></a>
+			<a href="restaurant/index.html">restaurant</a>
 			<br>
 			<br>
 			<br>
