not working image center

--- a/Restaurant/index.html
+++ b/Restaurant/index.html
@@ -41,8 +41,12 @@
     </ul>
   </div>
 </div>
-<div id="container">
-t
+<div id="homepage_container">
+  <div id="background_image_container">
+    <img src="img/coffee-690054.jpg" alt="coffee cup">
+  </div>
+  <h1>testing text</h1>
+
 </div>
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
