workling "menu" text and image

--- a/Restaurant/index.html
+++ b/Restaurant/index.html
@@ -13,6 +13,7 @@
   <meta property="og:image" content="">
 
   <link href="https://fonts.googleapis.com/css2?family=Piazzolla:wght@100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
@@ -30,7 +31,7 @@
 <div class="header">
   <div class="logo_container">
     <img src="img/coffee-307147.png" alt="logo">
-    <h1><span id="mugs">Mugs</span><span id="coffee">Coffee</span></h1>
+    <h1><span id="mugs">Mugs</span> Coffee</h1>
   </div>
   <div class="navigation">
     <ul>
@@ -41,12 +42,11 @@
     </ul>
   </div>
 </div>
-<div id="homepage_container">
-  <div id="background_image_container">
-    <img src="img/coffee-690054.jpg" alt="coffee cup">
+<div class="homepage_container">
+  <div class="menu_image_text">
+    <div id="background_image_container"></div>
+    <div class="image_text">MENU</div>
   </div>
-  <h1>testing text</h1>
-
 </div>
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
