--- a/Restaurant/index.html
+++ b/Restaurant/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Mugs coffee</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,6 +14,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Piazzolla:wght@100&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
@@ -28,26 +29,46 @@
 <body>
 
 <!-- Header -->
-<div class="header">
-  <div class="logo_container">
-    <img src="img/coffee-307147.png" alt="logo">
-    <h1><span id="mugs">Mugs</span> Coffee</h1>
+  <header class="header">
+    <div class="logo_container">
+      <img src="img/coffee-307147.png" alt="logo">
+      <h1><span id="mugs">Mugs</span> Coffee</h1>
+    </div>
+    <div class="navigation">
+      <ul>
+        <a><li>Home</li></a>
+        <a><li>Menu</li></a>
+        <a><li>About us</li></a>
+        <a><li>Contact</li></a>
+      </ul>
+    </div>
+  </header>
+  <div class="homepage_container">
+    <div class="menu_image_text">
+      <div id="background_image_container"></div>
+      <div class="image_text">MENU</div>
+    </div>
+    <div class="menu_content">
+      <div class="column">
+        <div class="inner_column_left">
+          <h2>Warm beverages</h2>
+          <hr>
+          <div class="menu_item">
+            <span class="title">CAFFÉ LATTE</span>
+<!--            <span class="dots"></span>-->
+            <span class="price">4.5$ / 5.5$</span>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="inner_column_right">
+          <h2>Foods</h2>
+          <hr>
+          <p>Some text..</p>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="navigation">
-    <ul>
-      <a><li>Home</li></a>
-      <a><li>Menu</li></a>
-      <a><li>About us</li></a>
-      <a><li>Contact</li></a>
-    </ul>
-  </div>
-</div>
-<div class="homepage_container">
-  <div class="menu_image_text">
-    <div id="background_image_container"></div>
-    <div class="image_text">MENU</div>
-  </div>
-</div>
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
