fixed flewxbox row, working on menu item

--- a/Restaurant/index.html
+++ b/Restaurant/index.html
@@ -53,11 +53,12 @@
       <div class="inner_column_left">
         <h2>Warm beverages</h2>
         <hr>
-        <div class="menu_item">
-          <span class="title">CAFFÉ LATTE</span>
-          <!--            <span class="dots"></span>-->
-          <span class="price">4.5$ / 5.5$</span>
-        </div>
+          <ul class="menu_list">
+            <li class="menu_item">
+              <span class="title">CAFFÉ LATTE</span ><span class="price">4.5$ / 5.5$</span>
+              <!--              <span class="dots">.......</span>-->
+            </li>
+          </ul>
       </div>
     </div>
     <div class="column">
