--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -18,6 +18,15 @@
 		</form>
 		<div id="result">
 		</div>
+		<!-- A modal to allow for saving a movie -->
+		<div id="modal-box" class="modal-box">
+			<!-- Modal content -->
+			<div class="modal-content">
+				<span class="close">&times;</span>
+				<p>Save to favourites?</p>
+				<button type="button" id="save">Save</button> <button type="button" id="cancel">Cancel</button>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
