working method in practice ,but no design currently (displaying array of movies)

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -16,7 +16,7 @@
 		<form action="" id="search-form" method="get" name="search-form" autocomplete="off">
 			<input id="text-box" name="query" type="text" placeholder="Enter movie title..." autofocus><button type="submit"><i class="fa fa-search"></i></button>
 		</form>
-		<div id="result">
+		<div id="result-container">
 		</div>
 		<!-- A modal to allow for saving a movie -->
 		<div id="modal-box" class="modal-box">
