--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -18,7 +18,7 @@
 			  A fake / hidden checkbox is used as click receiver,
 			  so you can use the :checked selector on it.
 			-->
-			<input type="checkbox"/>
+			<input id="input-hamburger" type="checkbox"/>
 
 			<!--Some spans to act as a hamburger.-->
 			<span id="slice1"></span>
