--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -13,44 +13,50 @@
 <body>
 	<div id="container">
 
-		<!-- HTML for favourite movies list -->
-		<div id="favourite-movies-container">
-			<!--
-			  A fake / hidden checkbox is used as click receiver,
-			  so you can use the :checked selector on it.
-			-->
-			<input id="input-hamburger" type="checkbox" onchange="inputToggleFavouriteMovies()"/>
+		<div id="favourite-movies-flex-container">
+			<!-- HTML for favourite movies list -->
+			<div id="favourite-movies-container">
+				<!--
+                  A fake / hidden checkbox is used as click receiver,
+                  so you can use the :checked selector on it.
+                -->
+				<input id="input-hamburger" type="checkbox" onchange="inputToggleFavouriteMovies()"/>
 
-			<!--Some spans to act as a hamburger.-->
-			<span id="slice1"></span>
-			<span id="slice2"></span>
-			<span id="slice3"></span>
+				<!--Some spans to act as a hamburger.-->
+				<span id="slice1"></span>
+				<span id="slice2"></span>
+				<span id="slice3"></span>
 
-			<div id="favourite-movies-content-container">
-				<h2>Favourites</h2>
-				<p id="empty-list-placeholder" style="display: none;">No favourites. Try adding one by clicking on a movie!</p>
-				<ul id="favourite-movies-list"></ul>
-				<button type="button" id="show-favourite-movies" onclick="displayFavouriteMovies()">Show</button>
+				<div id="favourite-movies-content-container">
+					<h2>Favourites</h2>
+					<p id="empty-list-placeholder" style="display: none;">No favourites. Try adding one by clicking on a movie!</p>
+					<ul id="favourite-movies-list"></ul>
+					<button type="button" id="show-favourite-movies" onclick="displayFavouriteMovies()">Show</button>
+				</div>
 			</div>
 		</div>
+
 
 		<!--Main content: search bar and results-->
-		<a href="/index.html" id="logo"><img src="/Webutveckling2_Klient/popcorn-1614707.png"></a>
-		<h1 id="title">Simple IMDB Search</h1>
-		<form action="" id="search-form" method="get" name="search-form" autocomplete="off">
-			<input id="search-box" name="query" type="text" placeholder="Enter movie title..." autofocus><button type="submit"><i class="fa fa-search"></i></button>
-		</form>
-		<div id="result-container"></div>
+		<div id="main-content-container">
+			<a href="/index.html" id="logo"><img src="/Webutveckling2_Klient/popcorn-1614707.png"></a>
+			<h1 id="title">Simple IMDB Search</h1>
+			<form action="" id="search-form" method="get" name="search-form" autocomplete="off">
+				<input id="search-box" name="query" type="text" placeholder="Enter movie title..." autofocus><button type="submit"><i class="fa fa-search"></i></button>
+			</form>
+			<div id="result-container"></div>
 
-		<!-- modal to allow for saving a movie -->
-		<div id="modal-box" class="modal-box">
-			<!-- Modal content -->
-			<div class="modal-content">
-				<span class="close">&times;</span>
-				<p>Save to favourites?</p>
-				<button type="button" id="save">Save</button> <button type="button" id="cancel">Cancel</button>
+			<!-- modal to allow for saving a movie -->
+			<div id="modal-box" class="modal-box">
+				<!-- Modal content -->
+				<div class="modal-content">
+					<span class="close">&times;</span>
+					<p>Save to favourites?</p>
+					<button type="button" id="save">Save</button> <button type="button" id="cancel">Cancel</button>
+				</div>
 			</div>
 		</div>
+
 	</div>
 </body>
 </html>
