fixed displaynone on mobile device

--- a/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
+++ b/Malmö högskola/Webutveckling2_Klient/imdb_quick_search/imdb_quick_search.html
@@ -27,7 +27,7 @@
 
 			<div id="favourite-movies-content-container">
 				<h2>Favourites</h2>
-				<p id="empty-list-placeholder" style="display: none;">No favourites. Try adding one by clicking on a movie!</p>
+				<p id="empty-list-placeholder">No favourites. Try adding one by clicking on a movie!</p>
 				<ul id="favourite-movies-list"></ul>
 				<button type="button" id="show-favourite-movies" onclick="displayFavouriteMovies()">Show</button>
 			</div>
